Ditch Collections.{singleton,empty}List()
Use List.of() instead.

Change-Id: I728826dba2b4790ef75606da918c5968b3c8ee48
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>